--- a/templates/sell.html
+++ b/templates/sell.html
@@ -7,6 +7,14 @@
 {% block main %}
     <form action="/sell" method="post">
         <div class="mb-3">
+            <select class="form-select mx-auto w-auto" name="symbol">
+                <option disabled selected>Symbol</option>
+                {% for holding in holdings %}
+                    <option value={{ holding }}>{{ holding }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" min="1" name="shares" placeholder="Shares" type="number">
         </div>
         <button class="btn btn-primary" type="submit">Sell</button>
